Update styles to fix display issues on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -156,6 +156,7 @@ button:active {
     position: relative;
     overflow: hidden;
 }
+
 .header-image img {
     width: 100%;
     height: 95vh;
@@ -165,8 +166,8 @@ button:active {
 
 .article.header-image img {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 75%);
-
 }
+
 .header-image h1 {
     color: white;
     font-size: 10rem;
@@ -339,14 +340,14 @@ footer a:hover {
     width: 100%;
     margin: 5rem auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 2.5rem;
 }
 
 .category {
     max-height: 15rem;
     width: 100%;
-    height: 20vh;
+    min-height: 20vh;
     overflow: hidden;
     padding: 0;
     position: relative;
@@ -730,7 +731,7 @@ input::file-selector-button {
 	width: 80%;
 	margin: 2rem auto;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 	grid-gap: 2rem;
 	/* color: white; */
 }
@@ -881,7 +882,7 @@ input::file-selector-button {
 
 .articles {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 2rem;
 }
 
@@ -1069,6 +1070,11 @@ input::file-selector-button {
 /* Media Queries */
 
 @media (max-width: 960px) {
+
+    html {
+        font-size: 50%;
+    }
+
 	.top {
 		grid-template-areas:
 			'hero hero'
@@ -1107,6 +1113,17 @@ input::file-selector-button {
         width: 80%;
     }
 
+    .header-image img {
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0% 85%);
+    }
+
+    .header-image h1 {
+        font-size: 5rem;
+    }
+    
+    .article.header-image img {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 85%);
+    }
     #sign-up {
         background-image: linear-gradient(
                 105deg,
